now loads svg polygons and looks better

--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
 <body>
 	<div id ="all">
 		<div id="infobox">
-			<div id = "infoname">
-			</div>
+			<img id="logo" src="topmenulogo.png">
+			<div id = "infoname"></div>
+			<div id = "infodetail"></div>	
 			
+
+			Select a Unit to display:
 			<div id = "infolist">
 			</div>
 		</div>
