--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Map</title>
+	<title>Interactive Diamond Map</title>
 	<link href="src/raphael.pan-zoom.css" rel="stylesheet" type="text/css" />
 	<link href="./style.css" rel="stylesheet" type="text/css" />
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script type="text/javascript" src="vendor/raphael-min.js"></script>
 	<script type="text/javascript" src="src/raphael.pan-zoom.min.js"></script>
-	<script type="text/javascript" src="./map.paths.js"></script>
 	<script type="text/javascript" src="./map.init.js"></script>
 </head>
 
