replaced search, made firefox complient

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script type="text/javascript" src="src/raphael.pan-zoom.min.js"></script>
 	<script type="text/javascript" src="./map.init.js"></script>
 	<script type="text/javascript" src="js/fuzzyset.js"></script>
-
+	<script type="text/javascript" src="js/fuse.js"></script>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 			<div id = "infoname"></div>
 			<div id = "infodetail"></div>	
 		
-			<input type="search" placeholder="Type misspelled state" id="searchbox">
+			<input type="search" placeholder="Search Diamond" id="searchbox">
 	
 			<br>Select a Unit to display:
 			<div id = "infolist">
