work on selection tool and cover extensibility

--- a/index.html
+++ b/index.html
@@ -15,11 +15,26 @@
 </head>
 
 <body>
+
+
+
+<span class="sectionTitle" style="color: rgb(51, 51, 153);">
+	About Us 
+</span>
+<span class="sectionTitle" style="color: rgb(153, 153, 153);">
+	|&nbsp;Interactive site map
+</span>
+<br>
+<br>
+<h2>
+Interactive site map
+</h2>
+
 	<div id ="all">
 		<div id="infobox">
 			<img id="logo" src="img/topmenulogo.png">
-			<div id = "infoname"></div>
-			<div id = "infodetail"></div>	
+			<div id = "infoname">name</div>
+			<div id = "infodetail">detail</div>	
 		
 			<input type="search" placeholder="Search Diamond" id="searchbox">
 	
@@ -32,6 +47,7 @@
 			<div id="mapControls">
 				<a id="up" href="javascript:;"></a><a id="down" href="javascript:;"></a>
 			</div>
+			<img id="gradient" src="img/gradient.png">
 		</div>
 	</div>
 </body>
